1.1.10
 * fix saved key cache not loading at startup (CASSANDRA-5166)
 * fix ConcurrentModificationException in getBootstrapSource (CASSANDRA-5170)


1.1.9
 * Simplify CompressedRandomAccessReader to work around JDK FD bug (CASSANDRA-5088)
 * Improve handling a changing target throttle rate mid-compaction (CASSANDRA-5087)
 * fix multithreaded compaction deadlock (CASSANDRA-4492)
 * fix specifying and altering crc_check_chance (CASSANDRA-5053)
 * Don't expire columns sooner than they should in 2ndary indexes (CASSANDRA-5079)
 * Pig: correctly decode row keys in widerow mode (CASSANDRA-5098)
 * nodetool repair command now prints progress (CASSANDRA-4767)
 * fix user defined compaction to run against 1.1 data directory (CASSANDRA-5118)
 * Fix CQL3 BATCH authorization caching (CASSANDRA-5145)
 * fix get_count returns incorrect value with TTL (CASSANDRA-5099)
 * better handling for amid compaction failure (CASSANDRA-5137)
 * calculate pending ranges asynchronously (CASSANDRA-5135)
 * convert default marshallers list to map for better readability (CASSANDRA-5109)


1.1.8
 * reset getRangeSlice filter after finishing a row for get_paged_slice
   (CASSANDRA-4919)
 * fix temporarily missing schema after upgrade from pre-1.1.5 (CASSANDRA-5061)
 * reduce log spam from invalid counter shards (CASSANDRA-5026)
 * Improve schema propagation performance (CASSANDRA-5025)
 * Fall back to old describe_splits if d_s_ex is not available (CASSANDRA-4803)
 * Improve error reporting when streaming ranges fail (CASSANDRA-5009)
 * cqlsh: fix timestamp formatting on some platforms (CASSANDRA-5046)
 * Fix ALTER TABLE overriding compression options with defaults (CASSANDRA-4996, 5066)
 * Avoid error opening data file on startup (CASSANDRA-4984)
 * Fix wrong index_options in cli 'show schema' (CASSANDRA-5008)
 * Allow overriding number of available processor (CASSANDRA-4790)


1.1.7
 * cqlsh: improve COPY FROM performance (CASSANDRA-4921)